Side menu on mobile open when navigating side menu unclosed fixed by ibrahim

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -266,7 +266,7 @@ body {
 // home page button start
 
 .tm-mv-bx {
-  transition: linear 0.2s;
+  transition: transform linear 0.2s;
   border-radius: 0px;
   overflow: hidden;
   // margin: 10px 0;
@@ -274,6 +274,7 @@ body {
   box-shadow: 5px 5px 15px 0 rgba(0, 0, 0, 0.4);
   border-radius: 10px;
   position: relative;
+  will-change: transform;
 }
 .tm-mv-bx:hover {
   transform: scale(1.3);
@@ -444,7 +445,8 @@ a:focus {
   background-color: #87c242;
 }
 
-.active-nav {
+.active-nav,
+.hover-nav {
   position: absolute;
   left: 0 !important;
   top: 0 !important;
@@ -706,9 +708,10 @@ input#menu[type="checkbox"] {
   left: -150px;
   top: 0;
   width: 200px;
-  transition: all 0.45s cubic-bezier(0.77, 0, 0.175, 1);
+  transition: left 0.45s cubic-bezier(0.77, 0, 0.175, 1);
   background-color: #121117;
   z-index: 999;
+  will-change: left;
 }
 .menu-dropdown {
   top: 0;
@@ -742,11 +745,11 @@ input#menu[type="checkbox"] {
 .sub-menu-dropdown {
   background-color: #333;
 }
-.menu:hover {
-  position: absolute;
-  left: 0;
-  top: 0;
-}
+// .menu:hover {
+//   position: absolute;
+//   left: 0;
+//   top: 0;
+// }
 .openNav .menu:hover {
   position: absolute;
   left: -150px;
